[gd_scene load_steps=5 format=2]

[ext_resource path="res://Juego/UI/BarraSalud.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Naves/NaveBase.gd" type="Script" id=3]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Naves/Player/player_golpeado.ogg" type="AudioStream" id=8]

[node name="NaveBase" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.32433 )

[node name="Canion" parent="." instance=ExtResource( 4 )]
position = Vector2( -1.68369, 0 )

[node name="ImpactoSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
bus = "SFX"

[node name="BarraSalud" parent="." instance=ExtResource( 1 )]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
